fixed container scroll, fixed the gap for old-price and badge

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,8 @@ h6 {
 }
 
 .container-scorll {
-  max-width: 1222px;
   margin: 0 auto;
-  padding: 0 10.8rem 0 0;
+  margin-right: 4.2rem;
 }
 
 .block {
@@ -1848,6 +1847,11 @@ textarea {
   align-items: center;
 }
 
+.card__price span:first-child {
+  display: flex;
+  gap: 0.4rem;
+}
+
 .old-price {
   text-decoration: line-through;
   color: #adadad;
@@ -2019,6 +2023,13 @@ textarea {
   width: 12px;
 }
 
+@media screen and (max-width:1054px) {
+  .container-scorll{
+    margin-right: 0;
+  }
+ 
+}
+
 @media screen and (min-width: 768px) {
   .branch__title h6:not(.branch__fave-foods h6) {
     font-size: 2.4rem;
@@ -2053,20 +2064,22 @@ textarea {
     font-size: 2rem;
   }
 
-  .add-to-faves, .card__likes {
+  .add-to-faves,
+  .card__likes {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 0.4rem;
   }
 
-  .add-to-faves p, .card__likes p {
+  .add-to-faves p,
+  .card__likes p {
     font-size: 1rem;
     color: #adadad;
     display: block;
   }
 
-  .card__likes strong{
+  .card__likes strong {
     font-weight: 500;
     color: var(--color-font);
     font-size: 1.4rem;
@@ -2074,16 +2087,19 @@ textarea {
   }
 
   .card__price {
-   align-items: flex-end;
+    align-items: flex-end;
   }
 
-  .new-price{
+  .card__price span:first-child {
+    gap: 0.8rem;
+  }
+
+  .new-price {
     font-size: 1.6rem;
   }
 
-  .offer-card .btn{
+  .offer-card .btn {
     font-size: 1.6rem;
     font-weight: 500;
   }
-
 }
